# Phonely

./: .gitignore  DEPLOY_TO_SERVER.md  EMAIL_SENDER_IMAGE_SETUP.md  IMPLEMENTATION_CHECKLIST.md  MONETIZATION_STRATEGY.md  NGINX_DEPLOYMENT.md  README.md  docker-compose.yml  index.html  nginx.conf
.github/: copilot-instructions.md
backend/: .env.example  .env.production.example  ZOHO_SETUP.md  package-lock.json  package.json
backend/src/: server.js
backend/src/config/: cloudinary.js  database.js  firebase.js  redis.js
backend/src/controllers/: admin.controller.js  auth.controller.js  chat.controller.js  inspection.controller.js  listing.controller.js  rating.controller.js  (+4 more)
crew-ai-service/phonely_ai/: .env.production.example  README.md  README_PHONELY.md  RUNNING.md  pyproject.toml  test_api.py  test_inspection_local.py
crew-ai-service/phonely_ai/src/phonely_ai/: api.py  crew.py  langgraph_orchestrator.py  main.py
crew-ai-service/phonely_ai/src/phonely_ai/config/: agents.yaml  tasks.yaml
crew-ai-service/phonely_ai/src/phonely_ai/tools/: __init__.py  gsmarena_tool_fixed.py  olx_scraper_tool.py  priceoye_tool.py  whatmobile_tool.py
deployment/: DEPLOYMENT_GUIDE.md  FIX_PM2_ENV.md  FIX_SMTP.md  deploy.sh
deployment/nginx/: ai.phonely.com.pk  api.phonely.com.pk  beta.phonely.com.pk
frontend/: .env.production.example  PERFORMANCE_OPTIMIZATIONS.md  deploy.sh  index.html  netlify.toml  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/public/: _headers  robots.txt
frontend/src/: App.tsx  index.css
landing-page/: index.html
(+94 files in other folders)
