[project]
name = "phonely_ai"
version = "0.1.0"
description = "Phonely AI - CrewAI-powered phone inspection system using GPT-5.1"
authors = [{ name = "Phonely Team", email = "team@phonely.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "loguru>=0.7.3",
]

[project.scripts]
phonely_ai = "phonely_ai.main:run"
run_crew = "phonely_ai.main:run"
train = "phonely_ai.main:train"
replay = "phonely_ai.main:replay"
test = "phonely_ai.main:test"
run_with_trigger = "phonely_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
